welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:20: error: unclosed comment
/*
^ColumnByColumn:20: error: unclosed comment
/*
^ColumnByColumn:20: error: unclosed comment
/*
^ColumnByColumn:2: error: Missing closing brace `}' assumed here
i=0
^ColumnByColumn:16: error: expected class or object definition
def tpC(x:Int){
^ColumnByColumn:20: error: unclosed comment
/*
^